just uploaded all the changes, I'm tired to keep track of the changes and list all the changes, basically I'm making the loan and withdraw functionality.