@@ -2,22 +2,24 @@ package io.github.pitzzahh;
 
 import java.util.*;
 import java.time.LocalDate;
+import io.github.pitzzahh.entity.*;
 import java.util.stream.Collectors;
+import static java.lang.System.exit;
 import java.util.concurrent.TimeUnit;
-import io.github.pitzzahh.entity.Client;
-import io.github.pitzzahh.entity.LockedAccount;
-import io.github.pitzzahh.service.ClientService;
+import io.github.pitzzahh.dao.AtmDAO;
+import com.github.pitzzahh.utilities.Print;
+import io.github.pitzzahh.service.AtmService;
 import com.github.pitzzahh.utilities.SecurityUtil;
+import static com.github.pitzzahh.utilities.Print.*;
 import com.github.pitzzahh.utilities.classes.Person;
 import com.github.pitzzahh.utilities.classes.enums.Role;
 import com.github.pitzzahh.utilities.classes.enums.Gender;
 import com.github.pitzzahh.utilities.classes.enums.Status;
-import com.github.pitzzahh.utilities.validation.Validator;
 import static com.github.pitzzahh.utilities.classes.TextColors.*;
+import static com.github.pitzzahh.utilities.classes.enums.Role.*;
 import static com.github.pitzzahh.utilities.classes.enums.Status.*;
-import static com.github.pitzzahh.utilities.validation.Validator.isString;
+import static com.github.pitzzahh.utilities.validation.Validator.*;
 import static io.github.pitzzahh.Atm.Machine.AdminAcc.getAllLockedAccounts;
-import static com.github.pitzzahh.utilities.validation.Validator.isDecimalNumber;
 
 /**
  * Automated Teller Machine.
@@ -25,8 +27,11 @@ import static com.github.pitzzahh.utilities.validation.Validator.isDecimalNumber
  * @author pitzzahh
  */
 public class Atm {
-    private static final ClientService CLIENT_SERVICE = new ClientService();
-    private static Hashtable<String, Client> clients = new Hashtable<>();
+    private static AtmDAO atmDAO;
+    private static final AtmService ATM_SERVICE = new AtmService(atmDAO);
+    private static final Hashtable<String, Client> CLIENTS = new Hashtable<>();
+    private static final Hashtable<String, List<Loan>> LOANS = new Hashtable<>();
+    private static final Hashtable<String, Message> MESSAGES = new Hashtable<>();
 
     /**
      * main method.
@@ -35,8 +40,8 @@ public class Atm {
     @SuppressWarnings("InfiniteLoopStatement")
     public static void main(String[] args)  {
         final var scanner = new Scanner(System.in);
-        CLIENT_SERVICE.setDataSource().accept(ClientService.getDataSource());
         Machine.loadClients();
+        Machine.loadClientLoans();
         for (;;)  {
             try {
                 switch (home(scanner)) {
@@ -44,8 +49,8 @@ public class Atm {
                     case CLIENT -> Machine.ClientAcc.client(scanner);
                 }
             } catch (RuntimeException | IllegalAccessException runtimeException) {
-                System.out.println(RED_BOLD_BRIGHT +  runtimeException.getMessage() + RESET);
-                System.out.print(YELLOW_BOLD_BRIGHT + "LOADING");
+                println(RED_BOLD_BRIGHT +  runtimeException.getMessage() + RESET);
+                print(YELLOW_BOLD_BRIGHT + "LOADING");
                 dotLoading();
             }
         }
@@ -54,16 +59,22 @@ public class Atm {
     /**
      * The automated teller machine that handles most of the process.
      */
-    static class Machine {
+    protected static class Machine {
+
+        private static final String LOCKED_ACCOUNT_MESSAGE = "\nACCOUNT LOCKED\nPLEASE CONTACT THE ADMINISTRATOR TO VERIFY YOUR IDENTITY AND UNLOCK YOUR ACCOUNT\n";
         private static final String $adm = "QGRtMW4xJHRyNHQwcg==";
         private static String $an;
+        private static final int DEPOSIT = 1;
+        private static final int WITHDRAW = 2;
+        private static final int LOAN = 3;
+
         /**
          * Searches the {@code Hashtable<String, Client>}, checks if the account number exists.
          * @param n the account number to search.
          * @return {@code true} if the account number exists.
          */
         private static boolean searchAccount(String n) {
-            return clients
+            return CLIENTS
                     .keySet()
                     .stream()
                     .anyMatch(number -> number.equals(n));
@@ -85,7 +96,14 @@ public class Atm {
          * Loads all the clients from the database.
          */
         private static void loadClients() {
-            clients.putAll(CLIENT_SERVICE.getAllClients().get());
+            CLIENTS.putAll(ATM_SERVICE.getAllClients().get());
+        }
+
+        /**
+         * Loads all the loans from the database.
+         */
+        private static void loadClientLoans() {
+            LOANS.putAll(ATM_SERVICE.getAllLoans().get());
         }
 
         /**
@@ -103,46 +121,49 @@ public class Atm {
                 var choice = "";
                 do {
                     try {
-                        System.out.println(RED_BOLD  + ": " + BLUE_BOLD_BRIGHT   + "1" + RED_BOLD + " : " + BLUE_BOLD_BRIGHT + "ADD CLIENT");
-                        System.out.println(RED_BOLD  + ": " + YELLOW_BOLD_BRIGHT + "2" + RED_BOLD + " : " + YELLOW_BOLD_BRIGHT + "REMOVE CLIENT");
-                        System.out.println(RED_BOLD  + ": " + GREEN_BOLD_BRIGHT  + "3" + RED_BOLD + " : " + GREEN_BOLD_BRIGHT + "VIEW CLIENTS");
-                        System.out.println(RED_BOLD  + ": " + PURPLE_BOLD_BRIGHT + "4" + RED_BOLD + " : " + PURPLE_BOLD_BRIGHT + "MANAGE LOCKED ACCOUNTS");
-                        System.out.println(RED_BOLD  + ": " + RED                + "5" + RED_BOLD + " : " + RED + "LOGOUT");
-                        System.out.print(PURPLE_BOLD + ">>>: " + RESET);
+                        println(PURPLE_BOLD_BRIGHT + "\n" +
+                                "╔═╗╔╦╗ ╔╦╗ ╦ ╔╗╔\n" +
+                                "╠═╣ ║║ ║║║ ║ ║║║\n" +
+                                "╩ ╩ ╩╝ ╩ ╩ ╩ ╝╚╝\n" + RESET
+                        );
+                        println(RED_BOLD  + ": " + BLUE_BOLD_BRIGHT   + "1" + RED_BOLD + " : " + BLUE_BOLD_BRIGHT + "ADD CLIENT");
+                        println(RED_BOLD  + ": " + YELLOW_BOLD_BRIGHT + "2" + RED_BOLD + " : " + YELLOW_BOLD_BRIGHT + "REMOVE CLIENT");
+                        println(RED_BOLD  + ": " + GREEN_BOLD_BRIGHT  + "3" + RED_BOLD + " : " + GREEN_BOLD_BRIGHT + "VIEW CLIENTS");
+                        println(RED_BOLD  + ": " + PURPLE_BOLD_BRIGHT + "4" + RED_BOLD + " : " + PURPLE_BOLD_BRIGHT + "MANAGE LOCKED ACCOUNTS");
+                        println(RED_BOLD  + ": " + CYAN_BOLD_BRIGHT   + "5" + RED_BOLD + " : " + CYAN_BOLD_BRIGHT + "MANAGE ACCOUNT LOANS");
+                        println(RED_BOLD  + ": " + RED                + "6" + RED_BOLD + " : " + RED + "LOGOUT");
+                        print(PURPLE_BOLD + ">>>: " + RESET);
                         choice = scanner.nextLine().trim();
                         switch (choice) {
                             case "1" -> {
-                                System.out.println(BLUE_BOLD_BRIGHT + "CREATE CLIENT" + RESET);
                                 var status = createClient(scanner);
-                                System.out.println(
-                                        status == SUCCESS ? BLUE_BOLD_BRIGHT + "\nCLIENT ADDED SUCCESSFULLY\n" :
-                                                RED_BOLD_BRIGHT + "\nERROR ADDING CLIENT\n" + RESET
-                                );
+                                println(status == SUCCESS ? BLUE_BOLD_BRIGHT + "\nCLIENT ADDED SUCCESSFULLY\n" : RED_BOLD_BRIGHT + "\nERROR ADDING CLIENT\n" + RESET);
                             }
                             case "2" -> {
-                                System.out.println(YELLOW_BOLD_BRIGHT + "REMOVE CLIENT" + RESET);
                                 var status = removeClient(scanner);
-                                System.out.println(
-                                        status == SUCCESS ? BLUE_BOLD_BRIGHT + "\nCLIENT REMOVED SUCCESSFULLY\n" :
-                                                RED_BOLD_BRIGHT + "\nERROR REMOVING CLIENT\n" + RESET
-                                );
+                                println(status == SUCCESS ? BLUE_BOLD_BRIGHT + "\nCLIENT REMOVED SUCCESSFULLY\n" : RED_BOLD_BRIGHT + "\nERROR REMOVING CLIENT\n" + RESET);
                             }
                             case "3" -> viewAllClients();
                             case "4" -> manageLockedAccounts(scanner);
-                            case "5" -> {
-                                System.out.print(RED_BOLD_BRIGHT + "LOGGING OUT");
+                            case "5" -> manageAccountLoans(scanner);
+                            case "6" -> {
+                                print(RED_BOLD_BRIGHT + "LOGGING OUT");
                                 dotLoading();
                             }
                             default -> throw new IllegalStateException(String.format("\nINVALID INPUT: %s\n", choice));
                         }
-                        clients.clear();
+                        CLIENTS.clear();
                         loadClients();
+                        if (!choice.equals("6")) {
+                            pause();
+                            if (!choice.equals("3")) println("");
+                        }
                     } catch (RuntimeException runtimeException) {
-                        System.out.println(RED_BOLD_BRIGHT +  runtimeException.getMessage() + RESET);
-                        System.out.print(YELLOW_BOLD_BRIGHT + "LOADING");
+                        println(RED_BOLD_BRIGHT +  runtimeException.getMessage() + RESET);
+                        print(YELLOW_BOLD_BRIGHT + "LOADING");
                         dotLoading();
                     }
-                } while (!choice.equals("5"));
+                } while (!choice.equals("6"));
             }
 
             /**
@@ -151,8 +172,13 @@ public class Atm {
              * @throws IllegalArgumentException if any of the input is not valid from the detail(scanner) method.
              */
             private static Status createClient(Scanner scanner) throws IllegalArgumentException {
+                println(PURPLE_BOLD_BRIGHT +
+                        "╔═╗╔╦╗╔╦╗" + YELLOW_BOLD + "  ╔═╗╦  ╦╔═╗╔╗╔╔╦╗\n" + PURPLE_BOLD_BRIGHT +
+                        "╠═╣ ║║ ║║" + YELLOW_BOLD + "  ║  ║  ║║╣ ║║║ ║ \n" + PURPLE_BOLD_BRIGHT +
+                        "╩ ╩═╩╝═╩╝" + YELLOW_BOLD + "  ╚═╝╩═╝╩╚═╝╝╚╝ ╩ \n"
+                );
                 var client = details(scanner);
-                return CLIENT_SERVICE.saveClient().apply(
+                return ATM_SERVICE.saveClient().apply(
                         new Client(
                                 client.accountNumber(),
                                 client.pin(),
@@ -164,7 +190,7 @@ public class Atm {
                                         client.details().getBirthDate()
                                 ),
                                 client.savings(),
-                                client.attempts()
+                                client.isLocked()
                         )
                 );
             }
@@ -184,50 +210,55 @@ public class Atm {
                 var gender = "";
                 var address = "";
                 var birthDate = "";
+                var doesExist = false;
+                do {
+                    try {
+                        print(BLUE_BOLD_BRIGHT + "Enter account number: ");
+                        an = scanner.nextLine().trim();
+                        checkAccountNumberInput(an);
+                        doesExist = searchAccount(an);
+                        if (doesExist) println(RED_BOLD_BRIGHT + String.format("\nCLIENT WITH ACCOUNT NUMBER : %s ALREADY EXISTS\n", an) + RESET);
+                    } catch (RuntimeException runtimeException) {
+                        println(RED_BOLD_BRIGHT +  runtimeException.getMessage() + RESET);
+                    }
+                } while (isIdValid().negate().test(an) || (an.length() < 9 || an.length() > 9) || doesExist);
 
                 do {
-                    System.out.print(BLUE_BOLD_BRIGHT + "Enter account number: ");
-                    an = scanner.nextLine().trim();
-                    checkAccountNumberInput(an);
-                    if (searchAccount(an)) System.out.println(RED_BOLD_BRIGHT + String.format("\nCLIENT WITH ACCOUNT NUMBER : %s ALREADY EXISTS\n", an) + RESET);
-                } while (Validator.isIdValid().negate().test(an) || an.length() < 9 || searchAccount(an));
-
-                do {
-                    System.out.print(PURPLE_BOLD_BRIGHT + "Enter account pin   : ");
+                    print(PURPLE_BOLD_BRIGHT + "Enter account pin   : ");
                     pin = scanner.nextLine().trim();
-                    if (Validator.isWholeNumber().negate().test(pin) || pin.length() < 6) System.out.println(RED_BOLD_BRIGHT + "\nPIN SHOULD BE 6 DIGITS\n" + RESET);
-                } while (Validator.isWholeNumber().negate().test(pin) || pin.length() < 6);
+                    if (isWholeNumber().negate().test(pin) || (pin.length() < 6 || pin.length() > 6)) println(RED_BOLD_BRIGHT + "\nPIN SHOULD BE 6 DIGITS\n" + RESET);
+                } while (isWholeNumber().negate().test(pin) || (pin.length() < 6 || pin.length() > 6));
 
-                System.out.print(YELLOW_BOLD_BRIGHT + "Enter client first name: ");
+                print(YELLOW_BOLD_BRIGHT + "Enter client first name: ");
                 firstName = scanner.nextLine().toUpperCase().trim();
 
-                System.out.print(YELLOW_BOLD_BRIGHT + "Enter client last name : ");
+                print(YELLOW_BOLD_BRIGHT + "Enter client last name : ");
                 lastName = scanner.nextLine().toUpperCase().trim();
 
                 do {
-                    System.out.print(GREEN_BOLD_BRIGHT + "Enter client gender    : ");
+                    print(GREEN_BOLD_BRIGHT + "Enter client gender    : ");
                     gender = scanner.nextLine().toUpperCase().trim();
-                    if (Validator.isGenderValid().negate().test(gender)) System.out.println(RED_BOLD_BRIGHT + "\nUnknown Gender, please select from the list: " + Arrays.toString(Arrays.stream(Gender.values()).map(Gender::name).toArray()) + "\n" + RESET);
-                } while (Validator.isGenderValid().negate().test(gender));
+                    if (isGenderValid().negate().test(gender)) println(RED_BOLD_BRIGHT + "\nUnknown Gender, please select from the list: " + Arrays.toString(Arrays.stream(Gender.values()).map(Gender::name).toArray()) + "\n" + RESET);
+                } while (isGenderValid().negate().test(gender));
 
-                System.out.print(BLUE_BOLD_BRIGHT + "Enter client address   : ");
+                print(BLUE_BOLD_BRIGHT + "Enter client address   : ");
                 address = scanner.nextLine().toUpperCase().trim();
                 List<String> b = new ArrayList<>();
                 var year = 2000;
                 var month = 1;
                 var day = 1;
                 do {
-                    System.out.print(PURPLE_BOLD_BRIGHT + "Enter client birthdate : ");
+                    print(PURPLE_BOLD_BRIGHT + "Enter client birthdate : ");
                     birthDate = scanner.nextLine().trim();
-                    if (Validator.isWholeNumber().or(isDecimalNumber()).or(isString()).test(birthDate)) throw new IllegalArgumentException("\nINVALID BIRTHDATE FORMAT, VALID FORMAT: (YYYY-MM-dd)\n");
+                    if (isWholeNumber().or(isDecimalNumber()).or(isString()).test(birthDate)) throw new IllegalArgumentException("\nINVALID BIRTHDATE FORMAT, VALID FORMAT: (YYYY-MM-dd)\n");
                     b = Arrays.stream(birthDate.split("-")).toList();
                     year = Integer.parseInt(b.get(0));
                     month = Integer.parseInt(b.get(1));
                     day = Integer.parseInt(b.get(2));
-                    if (year < 1850 || year > 2029) System.out.println(RED_BOLD_BRIGHT + String.format("\nINVALID YEAR: %s\n", String.valueOf(year)) + RESET);
-                    if (month <= 0 || month > 12) System.out.println(RED_BOLD_BRIGHT + String.format("\nINVALID MONTH: %s\n", String.valueOf(month)) + RESET);
-                    if (day <= 0 || (day > 31 && !LocalDate.EPOCH.isLeapYear())) System.out.println(RED_BOLD_BRIGHT + String.format("\nINVALID DAY: %s\n", String.valueOf(day)) + RESET);
-                } while (Validator.isBirthDateValid().negate().test(birthDate));
+                    if (year < 1850 || year > 2029) println(RED_BOLD_BRIGHT + String.format("\nINVALID YEAR: %s\n", String.valueOf(year)) + RESET);
+                    if (month <= 0 || month > 12) println(RED_BOLD_BRIGHT + String.format("\nINVALID MONTH: %s\n", String.valueOf(month)) + RESET);
+                    if (day <= 0 || (day > 31 && !LocalDate.of(year, month, day).isLeapYear())) println(RED_BOLD_BRIGHT + String.format("\nINVALID DAY: %s\n", String.valueOf(day)) + RESET);
+                } while (isBirthDateValid().negate().test(birthDate));
                 return new Client(
                         an,
                         pin,
@@ -239,7 +270,7 @@ public class Atm {
                                 LocalDate.of(year, month, day)
                         ),
                         5000.00,
-                        5
+                        false
                 );
             }
 
@@ -251,13 +282,22 @@ public class Atm {
              */
             protected static Status removeClient(Scanner scanner) throws IllegalStateException {
                 checkIfThereAreClientsAvailable();
-                System.out.println(RED_BOLD_BRIGHT + ":ENTER ACCOUNT NUMBER TO REMOVE:");
-                System.out.print(PURPLE_BOLD + ">>>: " + RESET);
-                $an = scanner.nextLine().trim();
-                checkAccountNumberInput($an);
-                if (!searchAccount($an)) throw new IllegalStateException(String.format("\nACCOUNT: %s DOES NOT EXIST\n", $an));
-                clients.remove($an);
-                return CLIENT_SERVICE.removeClientByAccountNumber().apply($an);
+                println(RED_BOLD_BRIGHT +
+                        "╦═╗╔═╗╔╦╗╔═╗╦  ╦╔═╗" + YELLOW_BOLD + "  ╔═╗╦  ╦╔═╗╔╗╔╔╦╗\n" + RED_BOLD_BRIGHT +
+                        "╠╦╝║╣ ║║║║ ║╚╗╔╝║╣ " + YELLOW_BOLD + "  ║  ║  ║║╣ ║║║ ║ \n" + RED_BOLD_BRIGHT +
+                        "╩╚═╚═╝╩ ╩╚═╝ ╚╝ ╚═╝" + YELLOW_BOLD + "  ╚═╝╩═╝╩╚═╝╝╚╝ ╩ \n" + RESET
+                );
+                if (CLIENTS.size() == 1) $an = CLIENTS.entrySet().stream().findAny().get().getValue().accountNumber();
+                else if (getAllLockedAccounts().size() == 1) $an = CLIENTS.get(getAllLockedAccounts().get(0).accountNumber()).accountNumber();
+                else {
+                    println(RED_BOLD_BRIGHT + ":ENTER ACCOUNT NUMBER TO REMOVE:");
+                    print(PURPLE_BOLD + ">>>: " + RESET);
+                    $an = scanner.nextLine().trim();
+                    checkAccountNumberInput($an);
+                    if (!searchAccount($an)) throw new IllegalStateException(String.format("\nACCOUNT: %s DOES NOT EXIST\n", $an));
+                }
+                CLIENTS.remove($an);
+                return ATM_SERVICE.removeClientByAccountNumber().apply($an);
             }
 
             /**
@@ -266,10 +306,10 @@ public class Atm {
              */
             protected static void viewAllClients() throws IllegalStateException {
                 checkIfThereAreClientsAvailable();
-                clients.entrySet()
+                CLIENTS.entrySet()
                         .stream()
                         .map(Map.Entry::getValue)
-                        .forEach(System.out::println);
+                        .forEachOrdered(Print::println);
             }
 
             /**
@@ -278,45 +318,66 @@ public class Atm {
              */
             private static void manageLockedAccounts(Scanner scanner) throws IllegalStateException {
                 final var LOCKED_ACCOUNTS = getAllLockedAccounts();
-                if (LOCKED_ACCOUNTS.size() == 0) throw new IllegalStateException("\nTHERE ARE NO LOCKED ACCOUNTS\n");
+                if (LOCKED_ACCOUNTS.isEmpty()) throw new IllegalStateException("\nTHERE ARE NO LOCKED ACCOUNTS\n");
                 String choice = "";
                 do {
-                    System.out.println(YELLOW_BOLD_BRIGHT + "\n: MANAGE LOCKED ACCOUNTS :\n");
-                    System.out.println(RED_BOLD_BRIGHT + "LOCKED " + (LOCKED_ACCOUNTS.size() > 1 ? "ACCOUNTS" : "ACCOUNT") +"\n");
-                    LOCKED_ACCOUNTS.forEach(System.out::println);
-                    System.out.println(PURPLE_BOLD + ":" + BLUE_BOLD_BRIGHT + " 1 " + PURPLE_BOLD_BRIGHT + ": " + BLUE_BOLD_BRIGHT + "REOPEN LOCKED ACCOUNT");
-                    System.out.println(PURPLE_BOLD + ":" + RED_BOLD_BRIGHT + " 2 " + PURPLE_BOLD_BRIGHT + ": " + RED_BOLD_BRIGHT + "DELETE LOCKED ACCOUNT");
-                    System.out.println(PURPLE_BOLD + ":" + GREEN_BOLD_BRIGHT + " 3 " + PURPLE_BOLD_BRIGHT + ": " + GREEN_BOLD_BRIGHT + "BACK");
-                    System.out.print(YELLOW_BOLD + ">>>: " + RESET);
+                    println(YELLOW_BOLD_BRIGHT +
+                            "╔╦╗╔═╗╔╗╔╔═╗╔═╗╔═╗  ╦  ╔═╗╔═╗╦╔═╔═╗╔╦╗  ╔═╗╔═╗╔═╗╔═╗╦ ╦╔╗╔╔╦╗╔═╗\n" +
+                            "║║║╠═╣║║║╠═╣║ ╦║╣   ║  ║ ║║  ╠╩╗║╣  ║║  ╠═╣║  ║  ║ ║║ ║║║║ ║ ╚═╗\n" +
+                            "╩ ╩╩ ╩╝╚╝╩ ╩╚═╝╚═╝  ╩═╝╚═╝╚═╝╩ ╩╚═╝═╩╝  ╩ ╩╚═╝╚═╝╚═╝╚═╝╝╚╝ ╩ ╚═╝\n"
+                    );
+                    println(RED_BOLD_BRIGHT + "LOCKED " + (LOCKED_ACCOUNTS.size() > 1 ? "ACCOUNTS" : "ACCOUNT") +"\n");
+                    LOCKED_ACCOUNTS.forEach(Print::println);
+                    println(PURPLE_BOLD + ":" + BLUE_BOLD_BRIGHT + " 1 " + PURPLE_BOLD_BRIGHT + ": " + BLUE_BOLD_BRIGHT + "REOPEN LOCKED ACCOUNT");
+                    println(PURPLE_BOLD + ":" + RED_BOLD_BRIGHT + " 2 " + PURPLE_BOLD_BRIGHT + ": " + RED_BOLD_BRIGHT + "DELETE LOCKED ACCOUNT");
+                    println(PURPLE_BOLD + ":" + GREEN_BOLD_BRIGHT + " 3 " + PURPLE_BOLD_BRIGHT + ": " + GREEN_BOLD_BRIGHT + "BACK");
+                    print(YELLOW_BOLD + ">>>: " + RESET);
                     choice = scanner.nextLine().trim();
                     switch (choice) {
                         case "1" -> {
-                            System.out.println(BLUE_BOLD_BRIGHT + "REOPEN ACCOUNT" + RESET);
+                            println(BLUE_BOLD_BRIGHT + "REOPEN ACCOUNT" + RESET);
                             var status = reopenAccount(scanner);
-                            System.out.println(
-                                    status == SUCCESS ? BLUE_BOLD_BRIGHT + "\nACCOUNT REOPENED SUCCESSFULLY\n" :
+                            println(status == SUCCESS ? BLUE_BOLD_BRIGHT + "\nACCOUNT REOPENED SUCCESSFULLY\n" :
                                             RED_BOLD_BRIGHT + "\nERROR REOPENING ACCOUNT\n" + RESET
                             );
                         }
                         case "2" -> {
-                            System.out.println(YELLOW_BOLD_BRIGHT + "REMOVE ACCOUNT" + RESET);
-                            var status = CANNOT_PERFORM_OPERATION;
-                            System.out.println(
-                                    status == SUCCESS ? BLUE_BOLD_BRIGHT + "\nACCOUNT REMOVED SUCCESSFULLY\n" :
+                            println(YELLOW_BOLD_BRIGHT + "REMOVE ACCOUNT" + RESET);
+                            var status = removeClient(scanner);
+                            println(status == SUCCESS ? BLUE_BOLD_BRIGHT + "\nACCOUNT REMOVED SUCCESSFULLY\n" :
                                             RED_BOLD_BRIGHT + "\nERROR REMOVING ACCOUNT\n" + RESET
                             );
                         }
                         case "3" -> {
-                            System.out.print(RED_BOLD_BRIGHT + "PLEASE WAIT");
+                            print(RED_BOLD_BRIGHT + "PLEASE WAIT");
                             dotLoading();
                         }
                         default -> throw new IllegalStateException(String.format("\nINVALID INPUT: %s\n", choice));
                     }
                     LOCKED_ACCOUNTS.removeIf(c -> c.accountNumber().equals($an));
-                    clients.clear();
+                    CLIENTS.clear();
                     loadClients();
                     if (LOCKED_ACCOUNTS.isEmpty()) break;
                 } while (!choice.equals("3"));
+            }
+
+            private static void manageAccountLoans(Scanner scanner) {
+                final var LOAN_REQUESTS = getAllLoanRequests();
+                if (LOAN_REQUESTS.isEmpty()) throw new IllegalStateException("\nTHERE ARE NO LOAN REQUESTS AVAILABLE\n");
+                String choice = "";
+                do {
+                    println(YELLOW_BOLD_BRIGHT +
+                            "╔╦╗╔═╗╔╗╔╔═╗╔═╗╔═╗  ╔═╗╔═╗╔═╗╔═╗╦ ╦╔╗╔╔╦╗  ╦  ╔═╗╔═╗╔╗╔╔═╗\n" +
+                            "║║║╠═╣║║║╠═╣║ ╦║╣   ╠═╣║  ║  ║ ║║ ║║║║ ║   ║  ║ ║╠═╣║║║╚═╗\n" +
+                            "╩ ╩╩ ╩╝╚╝╩ ╩╚═╝╚═╝  ╩ ╩╚═╝╚═╝╚═╝╚═╝╝╚╝ ╩   ╩═╝╚═╝╩ ╩╝╚╝╚═╝\n");
+                    println(RED_BOLD_BRIGHT + (LOAN_REQUESTS.size() > 1 ? "LIST OF LOANS" : "LOAN") +"\n");
+                    LOAN_REQUESTS.forEach(Print::println);
+                    println(PURPLE_BOLD + ":" + BLUE_BOLD_BRIGHT  + " 1 " + PURPLE_BOLD_BRIGHT + ": " + BLUE_BOLD_BRIGHT + "APPROVE LOAN");
+                    println(PURPLE_BOLD + ":" + RED_BOLD_BRIGHT   + " 2 " + PURPLE_BOLD_BRIGHT + ": " + RED_BOLD_BRIGHT + "REMOVE LOAN");
+                    println(PURPLE_BOLD + ":" + GREEN_BOLD_BRIGHT + " 3 " + PURPLE_BOLD_BRIGHT + ": " + GREEN_BOLD_BRIGHT + "BACK");
+                    print(YELLOW_BOLD + ">>>: " + RESET);
+                    choice = scanner.nextLine().trim();
+                } while (false);
             }
 
             /**
@@ -325,23 +386,27 @@ public class Atm {
              * @return a {@code Status} of the operation.
              */
             private static Status reopenAccount(Scanner scanner) {
-                System.out.println(RED_BOLD_BRIGHT + ":ENTER ACCOUNT NUMBER TO REOPEN:");
-                System.out.print(PURPLE_BOLD + ">>>: " + RESET);
-                $an = scanner.nextLine().trim();
-                checkAccountNumberInput($an);
-                if (!searchLockedAccount($an)) throw new IllegalStateException(String.format("\nACCOUNT: %s DOES NOT EXIST\n", $an));
-                return CLIENT_SERVICE.updateClientAttemptsByAccountNumber().apply($an, "5");
+                final var client = getAllLockedAccounts();
+                if (client.size() == 1) $an = client.stream().findAny().get().accountNumber();
+                else {
+                    println(YELLOW_BOLD_BRIGHT + ":ENTER ACCOUNT NUMBER TO REOPEN:");
+                    print(PURPLE_BOLD + ">>>: " + RESET);
+                    $an = scanner.nextLine().trim();
+                    checkAccountNumberInput($an);
+                    if (!searchLockedAccount($an)) throw new IllegalStateException(String.format("\nACCOUNT: %s DOES NOT EXIST\n", $an));
+                }
+                return ATM_SERVICE.updateClientAttemptsByAccountNumber().apply($an, false);
             }
 
             /**
-             * Gets all the list of locked accounts {@code Client} object and creating {@code LockedAccount} objects.
+             * Gets all the list of locked accounts {@code Client} object from {@link Atm#CLIENTS}, and creating {@code LockedAccount} objects.
              * @return a {@code List<LockedAccounts>}
              */
             protected static List<LockedAccount> getAllLockedAccounts() {
-                return clients.entrySet()
+                return CLIENTS.entrySet()
                         .stream()
                         .map(Map.Entry::getValue)
-                        .filter(an -> an.attempts() == 0)
+                        .filter(Client::isLocked)
                         .map(client -> {
                             return new LockedAccount(
                                     client.accountNumber(),
@@ -349,16 +414,27 @@ public class Atm {
                                     client.details().getGender()
                             );
                         })
-                        .collect(Collectors.toList());
+                        .toList();
             }
 
+            /**
+             * Gets all the values from the {@link Atm#LOANS}, that contains all the loan requests.
+             * @return a {@code List<Loan>}
+             */
+            private static List<Loan> getAllLoanRequests() {
+                return LOANS.entrySet()
+                        .stream()
+                        .map(Map.Entry::getValue)
+                        .flatMap(Collection::stream)
+                        .collect(Collectors.toList());
+            }
 
             /**
              * Checks if there are no clients available.
              * @throws IllegalStateException if there are no clients available.
              */
             private static void checkIfThereAreClientsAvailable() throws IllegalStateException {
-                if (clients.isEmpty()) throw new IllegalStateException("\nTHERE ARE NO CLIENTS AVAILABLE\n");
+                if (CLIENTS.isEmpty()) throw new IllegalStateException("\nTHERE ARE NO CLIENTS AVAILABLE\n");
             }
         }
 
@@ -366,8 +442,7 @@ public class Atm {
          * class for Client account.
          */
         protected static class ClientAcc {
-            // TODO: add client functions.
-            // TODO: fix bug
+
             /**
              * Called when a client is logged in.
              */
@@ -376,111 +451,192 @@ public class Atm {
                 do {
                     try {
                         viewClientDetails($an);
-                        System.out.println(BLUE_BOLD + ": " + BLUE_BOLD_BRIGHT   + "1" + BLUE_BOLD + " : " + BLUE_BOLD_BRIGHT   + "DEPOSIT");
-                        System.out.println(BLUE_BOLD + ": " + YELLOW_BOLD_BRIGHT + "2" + BLUE_BOLD + " : " + YELLOW_BOLD_BRIGHT + "WITHDRAW");
-                        System.out.println(BLUE_BOLD + ": " + RED                + "3" + BLUE_BOLD + " : " + RED + "LOAN");
-                        System.out.println(BLUE_BOLD + ": " + RED_BOLD_BRIGHT    + "4" + BLUE_BOLD + " : " + RED_BOLD_BRIGHT + "LOGOUT");
-                        System.out.print(PURPLE_BOLD + ">>>: " + RESET);
+                        println(BLUE_BOLD + ": " + BLUE_BOLD_BRIGHT   + "1" + BLUE_BOLD + " : " + BLUE_BOLD_BRIGHT   + "DEPOSIT");
+                        println(BLUE_BOLD + ": " + YELLOW_BOLD_BRIGHT + "2" + BLUE_BOLD + " : " + YELLOW_BOLD_BRIGHT + "WITHDRAW");
+                        println(BLUE_BOLD + ": " + RED                + "3" + BLUE_BOLD + " : " + RED                + "LOAN");
+                        println(BLUE_BOLD + ": " + CYAN_BOLD_BRIGHT   + "4" + BLUE_BOLD + " : " + CYAN_BOLD_BRIGHT   + "MESSAGES");
+                        println(BLUE_BOLD + ": " + RED_BOLD_BRIGHT    + "5" + BLUE_BOLD + " : " + RED_BOLD_BRIGHT    + "LOGOUT");
+                        print(PURPLE_BOLD + ">>>: " + RESET);
                         choice = scanner.nextLine().trim();
                         switch (choice) {
-                            case "1" -> deposit(scanner);
-                            case "2", "3" -> {}
-                            case "4" -> {
-                                System.out.print(RED_BOLD_BRIGHT + "LOGGING OUT");
+                            case "1" -> process(scanner, DEPOSIT);
+                            case "2" -> process(scanner, WITHDRAW);
+                            case "3" -> process(scanner, LOAN);
+                            case "4" -> viewMessages(scanner);
+                            case "5" -> {
+                                print(RED_BOLD_BRIGHT + "LOGGING OUT");
                                 dotLoading();
                             }
                             default -> throw new IllegalStateException(String.format("\nINVALID INPUT: %s\n", choice));
                         }
-                    } catch (RuntimeException | IllegalAccessException runtimeException) {
-                        System.out.println(RED_BOLD_BRIGHT +  runtimeException.getMessage() + RESET);
-                        System.out.print(YELLOW_BOLD_BRIGHT + "LOADING");
+                    } catch (RuntimeException runtimeException) {
+                        println(RED_BOLD_BRIGHT +  runtimeException.getMessage() + RESET);
+                        print(YELLOW_BOLD_BRIGHT + "LOADING");
                         dotLoading();
                     }
-                    clients.clear();
+                    CLIENTS.clear();
                     loadClients();
+                    if (!choice.equals("4")) {
+                        pause();
+                        println("");
+                    }
                     if (searchLockedAccount($an)) break;
                 } while (!choice.equals("4"));
+                loadClientLoans();
             }
 
             /**
-             * Method for depositing.
+             * Used for making client transactions.
+             * Used to deposit, withdraw and loan cash.
              * @param scanner a {@code Scanner} object needed for user input.
+             * @param transaction the transaction to be processed.
              */
-            public static void deposit(Scanner scanner) throws IllegalAccessException {
-                var client = clients.get($an);
-                var attempts = client.attempts();
-                if (attempts == 0) throw new IllegalAccessException("\nACCOUNT IS LOCKED\nCANNOT PROCEED TRANSACTION\n");
+            private static void process(Scanner scanner, int transaction) {
+                var client = CLIENTS.get($an);
                 var isLoggedIn = false;
-                while (attempts != 0) {
-                    System.out.print(BLUE_BOLD_BRIGHT + "ENTER PIN: ");
-                    String pin = scanner.nextLine().trim();
+                try {
+                    isLoggedIn = login(scanner, client);
+                } catch (RuntimeException | IllegalAccessException runtimeException) {
+                    println(RED_BOLD_BRIGHT + runtimeException.getMessage() + RESET);
+                    print(YELLOW_BOLD_BRIGHT + "LOADING");
+                    dotLoading();
+                }
+                if (isLoggedIn) {
+                    var cash = "";
+                    var cashToProcess = 0.0;
+                    var status = CANNOT_PERFORM_OPERATION;
+                    try {
+                        print(PURPLE_BOLD_BRIGHT);
+                        println(
+                                (transaction == DEPOSIT) ?
+                                        "╔╦╗╔═╗╔═╗╔═╗╔═╗╦╔╦╗\n" +
+                                        " ║║║╣ ╠═╝║ ║╚═╗║ ║ \n" +
+                                        "═╩╝╚═╝╩  ╚═╝╚═╝╩ ╩ \n" :
+                                        (transaction == WITHDRAW) ?
+                                                "╦ ╦╦╔╦╗╦ ╦╔╦╗╦═╗╔═╗╦ ╦\n" +
+                                                "║║║║ ║ ╠═╣ ║║╠╦╝╠═╣║║║\n" +
+                                                "╚╩╝╩ ╩ ╩ ╩═╩╝╩╚═╩ ╩╚╩╝\n" :
+                                                (transaction == LOAN) ?
+                                                        "╦  ╔═╗╔═╗╔╗╔\n" +
+                                                        "║  ║ ║╠═╣║║║\n" +
+                                                        "╩═╝╚═╝╩ ╩╝╚╝\n" :
+                                                        RED_BOLD_BRIGHT + "UNKNOWN PROCESSS"
+                        );
+                        println(YELLOW_BOLD_BRIGHT + ": ENTER CASH AMOUNT : ");
+                        print(RED_BOLD_BRIGHT + ">>>:  " + RESET);
+                        cash = scanner.nextLine().trim();
+                        if (isWholeNumber().or(isDecimalNumber()).negate().test(cash)) throw new IllegalStateException("\nCASH SHOULD BE A NUMBER\n");
+                        cashToProcess = Double.parseDouble(cash);
+                        if ((cashToProcess < 100) && transaction == DEPOSIT) throw new IllegalStateException("\nCASH AMOUNT TO DEPOSIT SHOULD NOT BE LESS THAN 100\n");
+                        if ((cashToProcess >= (80.0 / 100.0) * client.savings()) && transaction == WITHDRAW) throw new IllegalStateException("\nCASH TO WITHDRAW SHOULD NOT BE GREATER THAN 80% \nOR EQUAL TO CURRENT SAVINGS\n");
+                        if (transaction == DEPOSIT) status = ATM_SERVICE.updateClientSavingsByAccountNumber().apply(client.accountNumber(), client.savings() + cashToProcess);
+                        else if (transaction == WITHDRAW) status = ATM_SERVICE.updateClientSavingsByAccountNumber().apply($an, (client.savings() - cashToProcess));
+                        else if (transaction == LOAN) status = ATM_SERVICE.requestLoan().apply(
+                                new Loan(
+                                        client.accountNumber(),
+                                        LocalDate.now(),
+                                        cashToProcess,
+                                        true
+                                ));
+                        var message = switch (transaction) {
+                            case DEPOSIT -> status == SUCCESS ? BLUE_BOLD_BRIGHT + "CASH DEPOSITED SUCCESSFULLY" + RESET : RED_BOLD_BRIGHT + "ERROR DEPOSITING CASH" + RESET;
+                            case WITHDRAW -> status == SUCCESS ? BLUE_BOLD_BRIGHT + "CASH WITHDRAWED SUCCESSFULLY" + RESET : RED_BOLD_BRIGHT + "ERROR WITHDRAWING CASH" + RESET;
+                            case LOAN -> status == SUCCESS ? BLUE_BOLD_BRIGHT + "LOAN REQUEST HAS BEEN SENT\nA CONFIRMATION MESSAGE WILL BE SENT TO YOU SOON"  + RESET : RED_BOLD_BRIGHT + "ERROR LOANING CASH" + RESET;
+                            default -> throw new IllegalStateException(String.format("UNKNOWN PROCESSS: %d", transaction));
+                        };
+                        println(message);
+                        print(YELLOW_BOLD_BRIGHT + "LOADING");
+                        dotLoading();
+                    } catch (RuntimeException runtimeException) {
+                        println(RED_BOLD_BRIGHT + runtimeException.getMessage() + RESET);
+                        print(YELLOW_BOLD_BRIGHT + "LOADING");
+                        dotLoading();
+                    }
+                }
+            }
 
+            // TODO: implement and add comment
+            private static void viewMessages(Scanner scanner) {
+
+            }
+            /**
+             * Used to check the pin of the account before proceeding with a transaction.
+             * Locks the account if pin is incorrect 3 times.
+             * @param scanner a {@code Scanner} object needed for user input.
+             * @param client the {@code Client} object
+             * @return {@code true} if logged-in.
+             * @throws IllegalAccessException if the account is locked and cannot be accessed.
+             * @throws IllegalStateException if the account is locked during pin input.
+             */
+            private static boolean login(Scanner scanner, Client client) throws IllegalAccessException, IllegalStateException {
+                if (client.isLocked()) throw new IllegalAccessException("\nACCOUNT IS LOCKED\nCANNOT PROCEED TRANSACTION\n");
+                var isLoggedIn = false;
+                var attempts = 3;
+                while (attempts != 0) {
+                    print(BLUE_BOLD_BRIGHT + "ENTER PIN: ");
+                    var pin = scanner.nextLine().trim();
                     if (!client.pin().equals(pin)) {
-                        --attempts;
-                        System.out.println(RED_BOLD_BRIGHT + "\nINVALID PIN\n" + RESET);
+                        attempts--;
+                        println(RED_BOLD_BRIGHT + "\nINVALID PIN\n" + RESET);
                     }
                     else {
                         isLoggedIn = true;
                         break;
                     }
                     if (attempts == 0) {
-                        CLIENT_SERVICE.updateClientAttemptsByAccountNumber().apply(client.accountNumber(), "0");
-                        throw new IllegalAccessException("\nACCOUNT LOCKED\nPLEASE CONTACT THE ADMINISTRATOR TO VERIFY YOUR IDENTITY AND UNLOCK YOUR ACCOUNT\n" + RESET);
+                        ATM_SERVICE.updateClientAttemptsByAccountNumber().apply(client.accountNumber(), true);
+                        throw new IllegalStateException(LOCKED_ACCOUNT_MESSAGE + RESET);
                     }
                 }
-
-                if (isLoggedIn) {
-                    var cash = "";
-                    do {
-                        try {
-                            System.out.println(PURPLE_BOLD_BRIGHT + "\tDEPOSIT\t");
-                            System.out.println(YELLOW_BOLD_BRIGHT + ": ENTER CASH AMOUNT : ");
-                            System.out.print(RED_BOLD_BRIGHT + ">>>:  " + RESET);
-                            cash = scanner.nextLine().trim();
-                            if (Validator.isWholeNumber().or(isDecimalNumber()).negate().test(cash)) throw new IllegalStateException("\nCASH SHOULD BE A NUMBER\n");
-                            double cashToDeposit = Double.parseDouble(cash);
-                            if (cashToDeposit < 100) throw new IllegalStateException("\nCASH AMOUNT TO DEPOSIT SHOULD NOT BE LESS THAN 100\n");
-                            Status status = CLIENT_SERVICE.updateClientSavingsByAccountNumber().apply(client.accountNumber(), client.savings() + cashToDeposit);
-                            System.out.println(status == Status.SUCCESS ? BLUE_BOLD_BRIGHT + status.name() + RESET : RED_BOLD_BRIGHT + status.name() + RESET);
-                            System.out.print(YELLOW_BOLD_BRIGHT + "LOADING");
-                            dotLoading();
-                        } catch (RuntimeException runtimeException) {
-                            System.out.println(RED_BOLD_BRIGHT +  runtimeException.getMessage() + RESET);
-                            System.out.print(YELLOW_BOLD_BRIGHT + "LOADING");
-                            dotLoading();
-                        }
-                    } while (Validator.isWholeNumber().or(isDecimalNumber()).negate().test(cash));
-
-                }
+                return isLoggedIn;
             }
 
             /**
              * Outputs the client details.
              */
-            private static void viewClientDetails(String an) throws IllegalAccessException {
-                System.out.println(clients.get(an));
+            private static void viewClientDetails(String an) {
+                println(CLIENTS.get(an));
+            }
+        }
+
+        protected static class Messages {
+
+            private static void loadMessages() {
             }
         }
     }
 
     /**
-     * The Main interface
+     * The Main interface.
      * @param scanner the scanner needed for keyboard input.
      * @return a {@code Role}.
      * @throws IllegalArgumentException if any of the input is not valid.
      * @throws IllegalAccessException if the account does not exist.
      */
     private static Role home(Scanner scanner) throws IllegalArgumentException, IllegalAccessException {
-        System.out.println(BLUE_BOLD + "AUTOMATED " + YELLOW_BOLD + "TELLER " + PURPLE_BOLD + "MACHINE" + RESET);
-        System.out.println(YELLOW_BRIGHT + "ENTER YOUR ACCOUNT NUMBER" + RESET);
-        System.out.print(RED_BOLD_BRIGHT + ">>>: " + RESET);
+        print(RED_BOLD_BRIGHT +
+                "╔═╗" + CYAN_BOLD + "┬ ┬┌┬┐┌─┐┌┬┐┌─┐┌┬┐┌─┐┌┬┐  \n" + RED_BOLD_BRIGHT +
+                "╠═╣" + CYAN_BOLD + "│ │ │ │ ││││├─┤ │ ├┤  ││  \n" + RED_BOLD_BRIGHT +
+                "╩ ╩" + CYAN_BOLD + "└─┘ ┴ └─┘┴ ┴┴ ┴ ┴ └─┘─┴┘  \n");
+        print(GREEN_BOLD_BRIGHT +
+                "╔╦╗" + YELLOW_BOLD + "┌─┐┬  ┬  ┌─┐┬─┐  \n" + GREEN_BOLD_BRIGHT +
+                " ║ " + YELLOW_BOLD + "├┤ │  │  ├┤ ├┬┘  \n" + GREEN_BOLD_BRIGHT +
+                " ╩ " + YELLOW_BOLD + "└─┘┴─┘┴─┘└─┘┴└─  \n");
+        println(BLUE_BOLD_BRIGHT +
+                "╔╦╗" + PURPLE_BOLD + "┌─┐┌─┐┬ ┬┬┌┐┌┌─┐\n" + BLUE_BOLD_BRIGHT +
+                "║║║" + PURPLE_BOLD + "├─┤│  ├─┤││││├┤ \n" + BLUE_BOLD_BRIGHT +
+                "╩ ╩" + PURPLE_BOLD + "┴ ┴└─┘┴ ┴┴┘└┘└─┘" + RESET);
+        println(YELLOW_BRIGHT + "ENTER YOUR ACCOUNT NUMBER" + RESET);
+        print(RED_BOLD_BRIGHT + ">>>: " + RESET);
         var input = scanner.nextLine().trim();
-        if (input.equals(SecurityUtil.decrypt(Machine.$adm))) return Role.ADMIN;
+        if (input.equals(SecurityUtil.decrypt(Machine.$adm))) return ADMIN;
+        if (input.equals(SecurityUtil.decrypt("dGVybWluYXRl"))) exit(0);
         checkAccountNumberInput(input);
+        if (Machine.searchLockedAccount(input)) throw new IllegalAccessException(Machine.LOCKED_ACCOUNT_MESSAGE + RESET);
         var result = Machine.searchAccount(input);
         if (!result) throw new IllegalAccessException("\nACCOUNT DOES NOT EXIST\n");
         else Machine.$an = input;
-        return Role.CLIENT;
+        return CLIENT;
     }
 
     /**
@@ -490,20 +646,31 @@ public class Atm {
      */
     private static void checkAccountNumberInput(String accountNumber) throws IllegalArgumentException {
         if (isDecimalNumber().test(accountNumber)) throw new IllegalArgumentException("\nACCOUNT NUMBER IS A WHOLE NUMBER\n");
-        else if (Validator.isWholeNumber().negate().test(accountNumber)) throw new IllegalArgumentException("\nACCOUNT NUMBER IS A NUMBER\n");
-        else if (Validator.isWholeNumber().negate().test(accountNumber) || accountNumber.length() < 9) throw new IllegalArgumentException("\nACCOUNT NUMBER SHOULD BE 9 DIGITS\n");
+        else if (isWholeNumber().negate().test(accountNumber)) throw new IllegalArgumentException("\nACCOUNT NUMBER IS A NUMBER\n");
+        else if (isWholeNumber().negate().test(accountNumber) || (accountNumber.length() < 9 || accountNumber.length() > 9)) throw new IllegalArgumentException("\nACCOUNT NUMBER SHOULD BE 9 DIGITS\n");
     }
+
     /**
      * Creates a dot loading.
      */
     private static void dotLoading() {
+        final var RANDOM = new Random();
         try {
             for (int i = 1; i <= 3; i++) {
-                System.out.print(".");
-                TimeUnit.MILLISECONDS.sleep(500);
+                print(".");
+                TimeUnit.MILLISECONDS.sleep(RANDOM.nextInt(700) + 1);
             }
-            System.out.println(RESET + "\n");
+            println(RESET + "\n");
         } catch (InterruptedException ignored) {}
+    }
+
+    /**
+     * Pause the code execution.
+     * Continues when a key is pressed.
+     */
+    private static void pause() {
+        print(YELLOW_BOLD + ": PRESS ENTER TO CONTINUE :" + RESET);
+        new Scanner(System.in).nextLine();
     }
 }
 
